<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    >
<group android:checkableBehavior="single"
    >
    <item
        android:id="@+id/nav_home"
        android:checked="true"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_hot_news"
        android:checked="false"
        android:title="@string/menu_hotnews" />
    <item
        android:id="@+id/nav_movie_reviews"
        android:checked="false"
        android:title="@string/menu_movie_reviews" />
    <item
        android:id="@+id/nav_box_office"
        android:checked="false"
        android:title="@string/menu_box_office" />
    <item
        android:id="@+id/nav_top10"
        android:checked="false"
        android:title="@string/menu_top10" />
    <item
        android:id="@+id/nav_movie_trailers"
        android:checked="false"
        android:title="@string/menu_movie_trailers" />

</group>
</menu>